[package]
name = "miai-cli"
version = "0.1.2"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
crossterm = "0.29.0"
inquire = "0.9.1"
miai = { path = "../miai" }
tokio = { version = "1.47.1", features = ["macros", "sync", "io-std", "io-util", "time"] }
url = "2.5.7"
openssl = { version = "0.10", features = ["vendored"], optional = true }
time = { version = "0.3.44", features = ["local-offset"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
serde_json = "1.0.145"
once_cell = "1.21.3"
qrcode = { version = "0.14.1", default-features = false }
reqwest = { version = "0.12.23", features = ["json"] }

[[bin]]
path = "src/main.rs"
name = "xiaoai"

[features]
# https://github.com/cross-rs/cross/wiki/FAQ#openssl-is-not-installed
vendored-openssl = ["dep:openssl"]
