[package]
name = "miai"
version = "0.2.2"
edition = "2024"
homepage = "https://github.com/DreamAlone666/miai"
repository = "https://github.com/DreamAlone666/miai"
description = "调用你的小米、小爱音箱"
license = "MIT"
keywords = ["xiaomi", "mijia", "miservice", "misound"]
categories = ["api-bindings", "authentication"]

[dependencies]
base16ct = { version = "0.2.0", features = ["alloc"] }
base64ct = { version = "1.8.0", features = ["alloc"] }
cookie_store = "0.21.1"
hmac = "0.12.1"
md-5 = "0.10.6"
rand = "0.9.2"
reqwest = { version = "0.12.23", features = ["cookies", "json"] }
reqwest_cookie_store = "0.8.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha1 = "0.10.6"
sha2 = "0.10.9"
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["serde"] }
tracing = "0.1.41"
url = "2.5.7"

[dev-dependencies]
dotenvy = "0.15.7"
tokio = { version = "1.47.1", features = ["macros"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
